--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,12 +12,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3 # Sets the working directory
-      # This runs the following commands on an environment with texlive-full.
+
+      # Set config from secrets
+      - name: Add secret variables to conf.toml
+        env:
+          PHONE_NUMBER: ${{ secrets.PHONE_NUMBER }}
+          EMAIL: ${{ secrets.EMAIL }}
+        run: |
+          echo "phone = $PHONE_NUMBER" >> config.toml
+          echo "email = $EMAIL" >> config.toml
+          echo "redact = true" >> config.toml
+      
+      # Download Typst and compile
       - name: Typst
-        uses: lvignoli/typst-action@main
-        with:
-          source_file: |
-            english.typ
+        run: |
+          wget https://github.com/typst/typst/releases/latest/download/typst-x86_64-unknown-linux-musl.tar.xz
+          tar -xf typst-x86_64-unknown-linux-musl.tar.xz
+          typst-x86_64-unknown-linux-musl/typst compile --font-path=fonts/ english.typ
 
       # Move the generated pdf to a folder and deploy that folder to branch 'pdf'.
       - run: mkdir pdf
