--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3 # Sets the working directory
 
       # Set config from secrets, download and run Typst compiler
-      - name: Add secret variables to conf.toml
+      - name: Set variables and compile
         env:
           PHONE_NUMBER: ${{ secrets.PHONE_NUMBER }}
           EMAIL: ${{ secrets.EMAIL }}
