--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3 # Sets the working directory
 
       # Set config from secrets, download and run Typst compiler
-      - name: Set variables and compile
+      - name: Set variables from secrets
         env:
           PHONE_NUMBER: ${{ secrets.PHONE_NUMBER }}
           EMAIL: ${{ secrets.EMAIL }}
@@ -22,6 +22,9 @@ jobs:
           echo "phone = $PHONE_NUMBER" >> conf.toml
           echo "email = $EMAIL" >> conf.toml
           echo "redact = true" >> conf.toml
+
+      - name: Download Typst and compile
+        run: |
           wget https://github.com/typst/typst/releases/latest/download/typst-x86_64-unknown-linux-musl.tar.xz
           tar -xf typst-x86_64-unknown-linux-musl.tar.xz
           typst-x86_64-unknown-linux-musl/typst compile --font-path=fonts/ english.typ
